Fixed portfolio alignment center

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,3 +94,9 @@ body{
     font-family: 'Kranky', cursive;
     font-weight: bolder;
 }
+
+.card{
+    align-items:center;
+    align-content:center;
+    text-align: center;
+}
